# GTA4.CHS

./: .gitignore  CMakeLists.txt  CMakePresets.json  Note.txt  README.md  VC-LTL helper for cmake.cmake  custom_translations.json  example.json  natives.cfg.txt  natives.h.txt  string_table.json
common/: BinaryFile.hpp  MemoryFile.hpp  asm_gen.hpp  common.cpp  common.h  fnv_hash.cpp  fnv_hash.h  module_path.cpp  module_path.h  stdinc.cpp  stdinc.h
common/injector/: assembly.hpp  calling.hpp  hooking.hpp  injector.hpp  utility.hpp
gta4.chs/: CMakeLists.txt  byte_pattern.h  char_table.h  font.cpp  gta_aslr.cpp  gta_font.cpp  gta_game.cpp  gta_html.cpp  gta_html.h  gta_mail_reply.cpp  gta_mail_reply.h  gta_menu.h  gta_phone.cpp  gta_phone.h  gta_save.cpp  gta_save.h  plugin.cpp  whm_table.h
gxt_tool/: CMakeLists.txt  IVText.cpp  IVText.h  gxt2json.py  json2charset.py  json2gxt.py  main.cpp  table.json
plugin/: CMakeLists.txt  asm_gen.hpp  batch_matching.cpp  batch_matching.h  byte_pattern.cpp  byte_pattern.h  char_table.cpp  class_pointer.hpp  dllmain.cpp  font.cpp  font.h  game.cpp  game.h  grcTexturePC.cpp  grcTexturePC.h  gta_aslr.h  gta_benchmark.cpp  gta_benchmark.h  gta_font.cpp  gta_font.h  gta_game.cpp  gta_game.h  gta_html.cpp  gta_menu.cpp  gta_string.cpp  gta_string.h  gta_whm.cpp  gta_whm.h  plugin.cpp  plugin.h  read_png.cpp  read_png.h  string_table.cpp  string_table.h  texture.cpp  texture.h  texture_read.cpp  texture_read.h  whm_table.cpp
png2dxt5/: CMakeLists.txt  png2dxt5.cpp
whm_io/: CMakeLists.txt  HTMLDocument.h  HtmlTextExport.cpp  HtmlTextExport.h  WhmIO.cpp  main.cpp  pgBase.h  rsc_header.h
